--- a/LD52/Packages/manifest.json
+++ b/LD52/Packages/manifest.json
@@ -4,6 +4,8 @@
     "com.unity.cinemachine": "2.9.4",
     "com.unity.ide.visualstudio": "2.0.17",
     "com.unity.inputsystem": "1.4.4",
+    "com.unity.render-pipelines.high-definition": "14.0.4",
+    "com.unity.splines": "2.1.0",
     "com.unity.textmeshpro": "3.0.6",
     "com.unity.timeline": "1.7.2",
     "com.unity.ugui": "1.0.0",
